Created JavaFX application.